--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,15 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
+# Gradle Specifications
+org.gradle.jvmargs=-Xms256M -Xmx2G
+org.gradle.daemon=false
+
+# General Specifications
+mc_version=1.12.2
+mod_version=0.2.4.2
+forge_version=14.23.5.2823
+mod_group=com.integral.examplemod
+mod_id=thaumtweaks
+mod_name=ThaumTweaks
+mod_archives_name=thaumtweaks
+mod_author=GrigLog
+mod_icon=
+mod_description=Small TC6 addon, focused on rebalancing mod's mechanics and making overall game experience more enjoyable.
