--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,12 @@ buildscript {
     repositories {
         mavenCentral()
         jcenter()
-        maven {
-            name = "forge"
-            url = "https://maven.minecraftforge.net/"
-        }       
+        maven {url = "https://maven.minecraftforge.net/"}
 		maven {
-            name = "github"
+            name = "Github with all the libraries Forge has broken"
             url = "https://github.com/juanmuscaria/maven/raw/master"
         }
-        maven {
-            name = 'sponge'
-            url = 'https://repo.spongepowered.org/maven'
-        }
+        maven {url = 'https://repo.spongepowered.org/maven'}
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle2:[2.3-1.0.0-SNAPSHOT,)'
@@ -28,14 +22,8 @@ apply plugin: 'org.spongepowered.mixin'
 
 repositories {
     mavenCentral()
-    maven {
-        name = 'sponge'
-        url = 'https://repo.spongepowered.org/maven'
-    }
-    //maven { url = "https://dist.creeper.host/Sponge/maven" }
-	flatDir {
-		dirs 'libs'
-	}
+    maven {url = 'https://repo.spongepowered.org/maven'}
+	flatDir {dir 'libs'}
 }
 
 version = mod_version
@@ -77,7 +65,6 @@ configurations {
     implementation.extendsFrom(extraLibs)
 }
 dependencies {
-	//compile name: 'Baubles-1.12-1.5.2-dev'
     extraLibs('org.spongepowered:mixin:0.8-SNAPSHOT') { transitive = false }
     compile files('libs/Thaumcraft-1.12.2-6.1.BETA26-deobf.jar')
 }
@@ -90,18 +77,16 @@ jar {
             'TweakClass': 'org.spongepowered.asm.launch.MixinTweaker',
             "TweakOrder": 0,
             'MixinConfigs': 'mixins.thaumtweaks.json',
-            'FMLCorePlugin': 'griglog.thaumtweaks.core.TTPlugin'
+            'FMLCorePlugin': 'griglog.thaumtweaks.core.TTPlugin',
+
+            'FMLAT': 'vanilla_at.cfg'
     )
     from(configurations.extraLibs.collect { it.isDirectory() ? it : zipTree(it) }){
         exclude "LICENSE.txt", "META-INF/MANIFSET.MF", "META-INF/maven/**", "META-INF/*.RSA", "META-INF/*.SF"
     }
 }
 
-sourceSets {
-    main {
-        ext.refMap = "mixins.thaumtweaks.refmap.json"
-    }
-}
+sourceSets.main.ext.refMap = "mixins.thaumtweaks.refmap.json"
 
 task devJar(type: Jar) {
 	classifier = 'dev'
@@ -116,4 +101,13 @@ task sourcesJar(type: Jar) {
 artifacts {
 	archives devJar
 	archives sourcesJar
+}
+
+//this stores all the dependencies locally. I couldn't get it to work though. Must've done it before Forge ruined everything...
+task copyDependencies(type: Copy){
+    configurations.each {
+        if (it.isCanBeResolved())
+            from it into "gradle_dependencies"
+    }
+    from buildscript.configurations.classpath into "gradle_dependencies"
 }
