--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ org.gradle.daemon=false
 
 # General Specifications
 mc_version=1.12.2
-mod_version=0.2.4.3
+mod_version=0.3
 forge_version=14.23.5.2823
-mod_group=com.integral.examplemod
+mod_group=griglog
 mod_id=thaumtweaks
 mod_name=ThaumTweaks
 mod_archives_name=thaumtweaks
